Update image routing for about hero image and update home page hero image to cover the background

--- a/AK-Site/src/styles/main.css
+++ b/AK-Site/src/styles/main.css
@@ -16,3 +16,4 @@
 @import "./components/chatwidget.css";
 @import "./components/lenderscarousel.css";
 @import "./components/footer.css";
+@import "./pages/home-page.css";
